# ssoo-ejemplos

./: .devcontainer.json  .gitpod.yml  CMakeLists.txt  README  README.md  fork.cpp  shared-memory-sync.cpp  shared-memory.cpp  softstack.c  softstack.cpp  threads-mutex.cpp  threads.cpp
.devcontainer/: Dockerfile  devcontainer.json
led_test/: led_test.cpp
lib/BigInt/: BigInt.hpp
mips/: mips-syscall.s
src/: CMakeLists.txt  fifo-client.cpp  fifo-server.cpp  fork.cpp  led_test.cpp  memory_map.h  mmap.cpp  pipe.cpp  shared-memory-sync.cpp  shared-memory.cpp  softstack.c  softstack.cpp  threads-boost.cpp  threads-mutex-pthread.cpp  threads-mutex.cpp  threads-pthread.cpp  threads.cpp  yash.cpp
src/cap04/: CMakeLists.txt  led-test.cpp
src/cap04/arduino/: led_test.pde
src/cap06/: CMakeLists.txt  softstack.c  softstack.cpp  syscall.s
src/cap09/: CMakeLists.txt  README.md  createprocess.c  createprocess.cpp  fork-exec.c  fork-exec.cpp  fork.c  fork.cpp
src/cap10/: CMakeLists.txt  common.c  common.h  fifo-client.c  fifo-client.cpp  fifo-common.hpp  fifo-control.cpp  fifo-server.c  fifo-server.h  fifo.cpp  fork-pipe.cpp  fork-redir.c  message_queue.hpp  mqueue-client.cpp  mqueue-server.cpp  mqueue-server.hpp  pipe.cpp  redir.c  signals.c  signals.cpp  socket-client.cpp  socket-server.cpp  socket-server.hpp  socket.hpp
src/cap10/sockets/: CMakeLists.txt  README.md  socket-common.hpp  socket-control.cpp
src/cap10/tuberías/: README.md  fork-pipe.cpp
src/cap11/: CMakeLists.txt  README.md  anom-shared-memory.cpp  message_queue.hpp  mqueue-client.cpp  shared-memory-client.cpp  shared-memory-common.hpp  shared-memory-control.cpp  shared-memory-server.c  shared-memory-server.h  shared-memory.cpp  shared_memory.hpp
src/cap11/mqueue/: CMakeLists.txt  README.md  mqueue-server.cpp
src/cap11/signals/: CMakeLists.txt  README.md
src/cap11/sockets/: socket.cpp
src/cap11/tuberías/: CMakeLists.txt  README.md  fifo.cpp  fork-redir.cpp
src/cap12/: CMakeLists.txt  jthreads-factorial.cpp  pthread.cpp  pthreads-factorial.cpp  pthreads.cpp  threads-factorial.cpp  threads.cpp
src/cap13/: CMakeLists.txt  pthread-sync.cpp  pthreads-sync-counter.cpp  pthreads-sync-factorial.cpp  pthreads-sync.cpp  semaphore.hpp  threads-factorial.cpp  threads-sync-counter.cpp  threads-sync-factorial.cpp  threads-sync-semaphore.cpp  threads-sync.cpp
src/cap14/: threads-sync-factorial.cpp
src/cap17/: CMakeLists.txt  README.md  mapped-files.c  mapped-files.cpp  memory_map.hpp
src/cap19/: CMakeLists.txt  README.md  copyfile.cpp  dir-list.cpp  file-attribs.cpp  file-copy.cpp  filelock-client.cpp  filelock-server.c  filelock-server.h  filelock-stop.cpp  listdir.cpp
src/common/: bigint-factorial.hpp  bigint_factorial.hpp  factorial.cpp  factorial.hpp  timeserver.c  timeserver.cpp  timeserver.h  timeserver.hpp
src/otros/: CMakeLists.txt  yash.cpp
webserver/: README.md  holamundo.html  webserver
webserver/cgi-bin/: printenv
